2003-02-18  Martin Baulig  <martin@ximian.com>

	* MonoSymbolTable.cs (MethodIndexEntry): New public struct.

	* MonoSymbolFile.cs (MonoSymbolFile.GetMethodByToken): New method.

2003-02-18  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (MonoSymbolFile.Assembly): New public property.

	* MonoSymbolTable.cs (MethodEntry.MethodBase): New public property.
	(MethodEntry.LocalTypes): New public variable.

2003-02-18  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (MethodEntry.ThisTypeIndex): Renamed to
	ClassTypeIndex; provide this for all methods so we can get the
	class of static methods.

2003-02-10  Nick Drochak  <ndrochak@gol.com>

	* Mono.CSharp.Debugger.build: passing the /r using an 'arg' node works.
	The <include> node wasn't getting to the compiler. This fixes build
	breakage on cygwin.

	* MonoSymbolFile.cs: Qualify which Min method. Fixes build breakage
	on cygwin.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs (MonoSymbolWriter.ctor): We don't need the
	`mbuilder_array' anymore.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs (SourceFile): Derive from SourceFileEntry.
	(SourceBlock): We don't need source lines here.
	(SourceMethod): We're always constructed with source info.

	* MonoSymbolTable.cs: Added support for namespaces.
	(NamespaceEntry): New struct.
	(SourceFileEntry.DefineNamespace): New method.
	(MethodEntry.BuildLineNumberTable): The table is already sorted,
	so we don't need to do this here.

2003-02-09  Martin Baulig  <martin@ximian.com>

	* IMonoSymbolWriter.cs: Ooops, I forgot to remove this.

2003-02-08  Martin Baulig  <martin@ximian.com>

	* MonoSymbolDocumentWriter.cs: Removed.

	* MonoSymbolWriter.cs (SourceFile): Implement ISymbolDocumentWriter.

2003-02-08  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (GetMethodSource): New public method.
	(FindMethod): Return the correct index.

2003-02-07  Martin Baulig  <martin@ximian.com>
